chore: update version to 0.3.3
