# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/GetAttributesResponseDataInner.cs
@@ -1,0 +1,131 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// GetAttributesResponseDataInner
+    /// </summary>
+    [DataContract(Name = "GetAttributesResponse_data_inner")]
+    public partial class GetAttributesResponseDataInner
+    {
+        /// <summary>
+        /// Defines Kind
+        /// </summary>
+        [JsonConverter(typeof(StringEnumConverter))]
+        public enum KindEnum
+        {
+            /// <summary>
+            /// Enum String for value: string
+            /// </summary>
+            [EnumMember(Value = "string")]
+            String = 1,
+
+            /// <summary>
+            /// Enum Number for value: number
+            /// </summary>
+            [EnumMember(Value = "number")]
+            Number = 2,
+
+            /// <summary>
+            /// Enum Date for value: date
+            /// </summary>
+            [EnumMember(Value = "date")]
+            Date = 3,
+
+            /// <summary>
+            /// Enum Range for value: range
+            /// </summary>
+            [EnumMember(Value = "range")]
+            Range = 4
+        }
+
+
+        /// <summary>
+        /// Gets or Sets Kind
+        /// </summary>
+        [DataMember(Name = "kind", IsRequired = true, EmitDefaultValue = true)]
+        public KindEnum Kind { get; set; }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GetAttributesResponseDataInner" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        protected GetAttributesResponseDataInner() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GetAttributesResponseDataInner" /> class.
+        /// </summary>
+        /// <param name="key">key (required).</param>
+        /// <param name="kind">kind (required).</param>
+        /// <param name="values">values.</param>
+        public GetAttributesResponseDataInner(string key = default(string), KindEnum kind = default(KindEnum), List<GetAttributesResponseDataInnerValuesInner> values = default(List<GetAttributesResponseDataInnerValuesInner>))
+        {
+            // to ensure "key" is required (not null)
+            if (key == null)
+            {
+                throw new ArgumentNullException("key is a required property for GetAttributesResponseDataInner and cannot be null");
+            }
+            this.Key = key;
+            this.Kind = kind;
+            this.Values = values;
+        }
+
+        /// <summary>
+        /// Gets or Sets Key
+        /// </summary>
+        [DataMember(Name = "key", IsRequired = true, EmitDefaultValue = true)]
+        public string Key { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Values
+        /// </summary>
+        [DataMember(Name = "values", EmitDefaultValue = true)]
+        public List<GetAttributesResponseDataInnerValuesInner> Values { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class GetAttributesResponseDataInner {\n");
+            sb.Append("  Key: ").Append(Key).Append("\n");
+            sb.Append("  Kind: ").Append(Kind).Append("\n");
+            sb.Append("  Values: ").Append(Values).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
