# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/GetOwnersResponse.cs
@@ -1,0 +1,82 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// GetOwnersResponse
+    /// </summary>
+    [DataContract(Name = "GetOwnersResponse")]
+    public partial class GetOwnersResponse
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GetOwnersResponse" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        protected GetOwnersResponse() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GetOwnersResponse" /> class.
+        /// </summary>
+        /// <param name="data">data (required).</param>
+        public GetOwnersResponse(List<GetOwnersResponseDataInner> data = default(List<GetOwnersResponseDataInner>))
+        {
+            // to ensure "data" is required (not null)
+            if (data == null)
+            {
+                throw new ArgumentNullException("data is a required property for GetOwnersResponse and cannot be null");
+            }
+            this.Data = data;
+        }
+
+        /// <summary>
+        /// Gets or Sets Data
+        /// </summary>
+        [DataMember(Name = "data", IsRequired = true, EmitDefaultValue = true)]
+        public List<GetOwnersResponseDataInner> Data { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class GetOwnersResponse {\n");
+            sb.Append("  Data: ").Append(Data).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
