# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/GetOwnersResponseDataInner.cs
@@ -1,0 +1,81 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// GetOwnersResponseDataInner
+    /// </summary>
+    [DataContract(Name = "GetOwnersResponse_data_inner")]
+    public partial class GetOwnersResponseDataInner
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GetOwnersResponseDataInner" /> class.
+        /// </summary>
+        /// <param name="address">address.</param>
+        /// <param name="quantity">quantity.</param>
+        public GetOwnersResponseDataInner(string address = default(string), decimal? quantity = default(decimal?))
+        {
+            this.Address = address;
+            this.Quantity = quantity;
+        }
+
+        /// <summary>
+        /// Gets or Sets Address
+        /// </summary>
+        [DataMember(Name = "address", EmitDefaultValue = true)]
+        public string Address { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Quantity
+        /// </summary>
+        [DataMember(Name = "quantity", EmitDefaultValue = true)]
+        public decimal? Quantity { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class GetOwnersResponseDataInner {\n");
+            sb.Append("  Address: ").Append(Address).Append("\n");
+            sb.Append("  Quantity: ").Append(Quantity).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
