# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/RefreshContractRequestBody.cs
@@ -1,0 +1,91 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// RefreshContractRequestBody
+    /// </summary>
+    [DataContract(Name = "RefreshContractRequestBody")]
+    public partial class RefreshContractRequestBody
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="RefreshContractRequestBody" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        protected RefreshContractRequestBody() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="RefreshContractRequestBody" /> class.
+        /// </summary>
+        /// <param name="assetAddress">assetAddress (required).</param>
+        /// <param name="chainId">chainId (default to 13337M).</param>
+        public RefreshContractRequestBody(string assetAddress = default(string), decimal chainId = 13337M)
+        {
+            // to ensure "assetAddress" is required (not null)
+            if (assetAddress == null)
+            {
+                throw new ArgumentNullException("assetAddress is a required property for RefreshContractRequestBody and cannot be null");
+            }
+            this.AssetAddress = assetAddress;
+            this.ChainId = chainId;
+        }
+
+        /// <summary>
+        /// Gets or Sets AssetAddress
+        /// </summary>
+        [DataMember(Name = "assetAddress", IsRequired = true, EmitDefaultValue = true)]
+        public string AssetAddress { get; set; }
+
+        /// <summary>
+        /// Gets or Sets ChainId
+        /// </summary>
+        [DataMember(Name = "chainId", EmitDefaultValue = false)]
+        public decimal ChainId { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class RefreshContractRequestBody {\n");
+            sb.Append("  AssetAddress: ").Append(AssetAddress).Append("\n");
+            sb.Append("  ChainId: ").Append(ChainId).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
