# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/RefreshTokenRequestBody.cs
@@ -1,0 +1,105 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// RefreshTokenRequestBody
+    /// </summary>
+    [DataContract(Name = "RefreshTokenRequestBody")]
+    public partial class RefreshTokenRequestBody
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="RefreshTokenRequestBody" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        protected RefreshTokenRequestBody() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="RefreshTokenRequestBody" /> class.
+        /// </summary>
+        /// <param name="assetAddress">assetAddress (required).</param>
+        /// <param name="tokenId">tokenId (required).</param>
+        /// <param name="chainId">chainId (default to 13337M).</param>
+        public RefreshTokenRequestBody(string assetAddress = default(string), string tokenId = default(string), decimal chainId = 13337M)
+        {
+            // to ensure "assetAddress" is required (not null)
+            if (assetAddress == null)
+            {
+                throw new ArgumentNullException("assetAddress is a required property for RefreshTokenRequestBody and cannot be null");
+            }
+            this.AssetAddress = assetAddress;
+            // to ensure "tokenId" is required (not null)
+            if (tokenId == null)
+            {
+                throw new ArgumentNullException("tokenId is a required property for RefreshTokenRequestBody and cannot be null");
+            }
+            this.TokenId = tokenId;
+            this.ChainId = chainId;
+        }
+
+        /// <summary>
+        /// Gets or Sets AssetAddress
+        /// </summary>
+        [DataMember(Name = "assetAddress", IsRequired = true, EmitDefaultValue = true)]
+        public string AssetAddress { get; set; }
+
+        /// <summary>
+        /// Gets or Sets TokenId
+        /// </summary>
+        [DataMember(Name = "tokenId", IsRequired = true, EmitDefaultValue = true)]
+        public string TokenId { get; set; }
+
+        /// <summary>
+        /// Gets or Sets ChainId
+        /// </summary>
+        [DataMember(Name = "chainId", EmitDefaultValue = false)]
+        public decimal ChainId { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class RefreshTokenRequestBody {\n");
+            sb.Append("  AssetAddress: ").Append(AssetAddress).Append("\n");
+            sb.Append("  TokenId: ").Append(TokenId).Append("\n");
+            sb.Append("  ChainId: ").Append(ChainId).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
